SlangNet.Bindings/Generated/Slang.cs


    /// <include file='Slang.xml' path='doc/member[@name="Slang.CompileRequest_getProgramWithEntryPoints"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spCompileRequest_getProgramWithEntryPoints", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int CompileRequest_getProgramWithEntryPoints([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("slang::IComponentType **")] IComponentType** outProgram);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.CompileRequest_getEntryPoint"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spCompileRequest_getEntryPoint", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int CompileRequest_getEntryPoint([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("SlangInt")] long entryPointIndex, [NativeTypeName("slang::IComponentType **")] IComponentType** outEntryPoint);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.CompileRequest_getModule"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spCompileRequest_getModule", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int CompileRequest_getModule([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("SlangInt")] long translationUnitIndex, [NativeTypeName("slang::IModule **")] IModule** outModule);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.CompileRequest_getSession"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spCompileRequest_getSession", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int CompileRequest_getSession([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("slang::ISession **")] ISession** outSession);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetTranslationUnitSource"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetTranslationUnitSource", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* GetTranslationUnitSource([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int translationUnitIndex);
}
